--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
-    background-image: url(images/background_BW.jpeg);
+    background-image: url(images/background.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: auto;
+    background-attachment:fixed;
+    background-position: center;
 }
 
 @font-face {
@@ -25,26 +27,39 @@ h2 {
 h3 {
     font-family: "UniversLT-UltraCondensed";
     font-size: 2.5em;
+    text-transform: uppercase;
     letter-spacing: 0.08em;
     color: #ffffff;
     text-align: center;
 }
 
 
+/* NAVBAR */
+
 .navbar {
     position: relative;
     min-height: 50px;
-    margin-bottom: 20px;    
+    margin-top: 25px;
+    margin-bottom: 20px;
 }
 
 .navbar-default {
-    background-color: transparent;
+    background-color: rgb(120, 120, 120, 0.4);
     border-color: transparent;
+}
+
+.navbar .navbar-brand {
+    padding-top: 0px;
+}
+
+.navbar .navbar-brand img {
+    height: 160%;
+    margin-right: 50px;
 }
 
 .navbar-default .navbar-nav li a {
     font-size: large;
-    color: black;
+    color: #ffffff;
 }
 
 .navbar-default .navbar-nav > .active > a,
@@ -55,43 +70,49 @@ h3 {
       border-radius: 5px;
 }
 
+
+/* JUMBOTRON */
+
 .jumbotron {
     background-color: rgb(120, 120, 120, 0.4);
     text-align: center;
     font-family: "UniversLT-UltraCondensed";
     letter-spacing: 0.5em;
+    border: 1px solid #d1b085;
 }
 
-.jumbotron hr {
+hr {
     background-color: #d1b085;
     height: 3px;
     border: none;
 }
 
 .jumbotron h1 {
-    font-size: 10em;
+    font-size: 8em;
     color: #d1b085;
     margin-bottom: 25px;
     margin-top: 25px;
 }
 
 .jumbotron p {
-    font-size: 5em;
+    font-size: 4em;
     text-transform: uppercase;
     color: #ffffff;
 }
 
+
+/* PANEL */
 .panel {
     background-color: rgb(120, 120, 120, 0.4);
-    margin-left: 50px;
-    margin-right: 50px;
     width: 70%;
-    height: 340px;
+    height: auto;
+    margin-top: 5px;
     margin-right: auto;
     margin-left: auto;
     padding-bottom: 25px;
     padding-left: 20px;
     padding-right: 20px;
+    border: 1px solid #d1b085;
 }
 
 .panel p {
@@ -104,9 +125,224 @@ h3 {
 
 .panel ul {
     color: #ffffff;
+    font-family: "ZillaSlab-Italic";
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+.panel li {
+
 }
 
 [class*="col-"] {
     border-radius: 5px;
     
+}
+
+
+/* MENU */
+
+.menu h2 {
+    font-size: 2.5em;
+    letter-spacing: 0.1em;
+    color: #d1b085;
+    text-align: left;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding-top: 5px;
+    border-top: 3px solid #d1b085;
+    border-bottom: 3px solid #d1b085;
+}
+
+.menu h3 {
+    font-size: 2em;
+    letter-spacing: 0.1em;
+}
+
+.list-group li {
+    height: 50%;
+}
+
+.list-group-item h4 {
+    font-family: "UniversLT-UltraCondensed";
+    font-size: 1.5em;
+    text-transform: uppercase;
+    letter-spacing: 0.08em;
+    color: #d1b085;
+}
+
+
+.list-group-item p {
+    font-family: "ZillaSlab-Italic";
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 1.1em;
+}
+
+
+
+.menu {
+    background-color: rgb(120, 120, 120, 0.4);
+    border: 1px solid #d1b085;
+    margin-bottom: 25px;
+}
+
+.list-group-item {
+    background-color: rgb(120, 120, 120, 0.6);
+    padding-bottom: 1px;
+}
+
+
+/* GALERIE */
+
+.row.picture {
+    margin-top: 25px;
+}
+
+.picture img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+#pagination {
+   text-align: center;
+   margin-top: 25px;
+   margin-bottom: 205px;
+}
+
+
+
+
+/* RESTAURANTS */
+
+h3.restaurants{
+    font-family: "UniversLT-UltraCondensed";
+    font-size: 2.5em;
+    letter-spacing: 0.08em;
+    text-transform: none;
+    color: #d1b085;
+    text-align: center;
+    margin-top: 75px;
+    padding-top: 5px;
+    border-top: 3px solid #d1b085;
+    border-bottom: 3px solid #d1b085;
+}
+
+.row.restaurant a, a:hover, a:visited, a:active {
+    text-decoration: none;
+}
+
+.choix {
+    font-family: "UniversLT-UltraCondensed";
+    font-size: 2em;
+    width: 25%;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 445px;
+    background-color: rgb(209, 176, 133, 0.8);
+    color: #ffffff;
+    text-align: center;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+}
+.row.coord {
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
+
+#address {
+    margin-top: 50px;
+    text-align: center;
+    background-color: rgb(120, 120, 120, 0.6);
+    margin-bottom: 25px;
+
+    border: 1px solid #d1b085;
+}
+
+.row.coord h4 {
+    border-top: 2px solid #d1b085;
+    border-bottom: 2px solid #d1b085;
+    font-family: "UniversLT-UltraCondensed";
+    font-size: 2em;
+    letter-spacing: 0.08em;
+    color: #d1b085;
+}
+
+.row.coord p {
+    font-family: "ZillaSlab-Italic";
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+.row.coord iframe {
+    border: 1px solid #d1b085;
+    border-radius: 5px;
+}
+
+
+/* FORMULAIRE CONTACT */
+
+form {
+    background-color: rgb(120, 120, 120, 0.4);    
+    border-radius: 5px;
+    padding-top: 1px;
+    margin-bottom: 25px;
+    border: 1px solid #d1b085;
+}
+
+
+form h2 {
+    font-size: 2.5em;
+    letter-spacing: 0.1em;
+    color: #d1b085;
+    text-align: left;
+    margin-left: 25px;
+    margin-right: 25px;
+    padding-top: 5px;
+    border-top: 3px solid #d1b085;
+    border-bottom: 3px solid #d1b085;
+}
+
+.form-group {
+    margin-left: 25px;
+    margin-right: 25px;
+    font-family: "UniversLT-UltraCondensed";
+    font-size: 1.5em;
+    color: #d1b085;
+    letter-spacing: 0.1em;
+
+}
+
+form .form-group .form-control {
+    font-size: 1em;
+}
+
+.btn {
+    background-color: #d1b085;
+    font-size: 1em;
+    border: 2px solid #ffffff;
+    margin-top: -20px;
+}
+
+/* FOOTER */
+
+footer {
+    text-align: center;
+    padding-top: 10px;
+    background-color: rgb(120, 120, 120, 0.4);
+}
+
+footer a {
+    color: #d1b085;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+
+footer p {
+    font-family: "UniversLT-UltraCondensed";
+    color: #d1b085;
+    margin-top: 10px;
 }
